tab配置,公共样式配置

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,42 +1,24 @@
 // 标准色
-$color-main-1a = #1A1D3D
+$color-main = #FF533C
 $color-cut-line-ff16 = rgba(255, 255, 255, 0.16)
 $color-cut-line-ed = #EDEDED
 $color-background-ff = #FFFFFF
-$color-background-f6 = #F6F7FA
-$color-background-fa = #FAFAFA
-$color-text-2d = #2D2D2D
-$color-text-a4 = #A4A4A4
-$color-text-95 = #959DBD
-$color-text-00 = #000000
-$color-assist-27 = #273156
-$color-assist-34 = #3460EC
-$color-assist-2a = #2AC3FF
-$color-assist-33 = #3364FF
-$color-assist-47 = #4778C0
-$color-assist-6d = #6D42E6
-$color-assist-ffd = #FFD708
-$color-assist-7c = #7CC1E7
-$color-assist-c9 = #C9826B
-$color-assist-28 = #28D618
-$color-assist-333 = #333333
-$color-assist-36 = #363547
+$color-background-f0 = #F0F0F0
+$color-background-f6 = #F6F7F9
+$color-text-31 = #313131
+$color-text-86 = #868686
+$color-text-b1 = #B1B1B1
+$color-text-d4 = #D4D4D4
+$color-assist-ff7 = #ff7328
+$color-assist-ff4 = #ff482d
+$color-assist-e79 = #E79300
+$color-assist-fff = #FFFBF4
 
 // 颜色定义规范
-$color-wx-1a = #1AC521
-$color-background-f9 = #f9f9f9
-$color-text-46 = #464646
-$color-text-9b = #9b9b9b
-$color-master-70 = #706B82
-$color-dot-4a = #4A557A
-$color-dot-a7 = #A7AFCD
-$color-pro-bg-1f = #1F2347
-$color-background-e9 = #E9EDF9
-$color-ktv-theme = #FF4E00
+
 // 横线色值
-$color-row-line-f0 = #F0EFF5
-$color-row-line-3f = #3F4661
-$color-col-line-cd = #CDCDCD
+$color-row-line-f0 = #F0F0F0
+$color-col-line-f0 = #F0F0F0
 // 竖线色值
 
 // 遮罩
